<resources>
    <string name="app_name">BLIST</string>
    <string name="edtpass_text">Escribe tu contraseña</string>
    <string name="btnsignin_text">Iniciar sesión</string>
    <string name="btnsigngoogle">Acceder con Google</string>
    <string name="txtvpass_text">Contraseña</string>
    <string name="edtuseremail_text">Escribe tu correo electrónico</string>
    <string name="txtvuseremail_text">Email</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="tab_text_1">Grupos</string>
    <string name="tab_text_2">Actividad</string>
    <string name="tab_text_3">Perfil</string>
    <string name="txtvTitle">Introduce tus datos</string>
    <string name="txtvQuestion_name">¿Cómo te llamas?</string>
    <string name="txtvQuestion_email">¿Cuál es tu correo electrónico?</string>
    <string name="txtvQuestion_passFirst">Introduzca tu contraseña</string>
    <string name="txtvQuestion_passSecond">Vuelva a introducir su contraseña</string>
    <string name="edtInput_name">Nombre</string>
    <string name="email">Correo electrónico</string>
    <string name="edtInput_pass">Contraseña</string>
    <string name="cancel">Cancelar</string>
    <string name="btnContinue_Continue">Continuar</string>
    <string name="btnContinue_Finalize">Finalizar</string>
    <string name="pass_NotEquals">Las contraseñas no coinciden</string>
    <string name="email_NoMatch">Formato de correo electrónico incorrecto</string>
    <string name="password_failure">Debe introducir una contraseña con un mínimo 4 caracteres</string>
    <string name="name_empty">Debe introducir su nombre</string>
    <string name="sharedPreferences_empty">Usuario no registrado en el dispositivo</string>
    <string name="login_failure">Usuario o contraseña incorrecta, pruebe de nuevo</string>
    <string name="separator_text">o</string>
    <string name="next">Siguiente</string>
    <string name="previous">Previous</string>
    <string name="page_group">Grupos</string>
    <string name="page_activity">Actividad</string>
    <string name="page_profile">Perfil</string>
    <string name="fg_emptytitle">Sin grupos</string>
    <string name="fg_emptydescription">Aún no tienes ningún grupo creado.<br />Cuando lo crees este te aparecerá aquí.</string>
    <string name="role_noselected">Eliga un rol para el nuevo miembro</string>
    <string name="userNoDB">El usuario no está registrado</string>
    <string name="role_admin">Admin</string>
    <string name="role_editor">Editor</string>
    <string name="role_reader">Lector</string>
    <string name="txtv_RGADescription_0">Necesitamos que establezcas una contraseña. Esto te permitirá iniciar sesión también con tu correo electrónico</string>
    <string name="txtv_RGADescription_1">Vuelve a introducir la contraseña. Nos aseguraremos que esté bien escrita</string>
    <string name="edt_AGAMemberOfGroup">Miembro del grupo</string>
    <string name="dd_AGARole">Rol</string>
    <string name="dd_AGACurrency">Divisa</string>
    <string name="dd_AGADescription">Descripción</string>
    <string name="btn_AGAAdd">Crear</string>
    <string name="edt_agagroupname">Nombre del grupo</string>
    <string name="imgb_AGAAddMemberContentDescription">Imagen con simbolo más que indica añadir</string>
    <string name="txtv_AGAMemberLabel">Miembros del grupo</string>
    <string name="filter">Filtrar</string>
    <string name="edit">Editar</string>
    <string name="select_date">Selecciona una fecha</string>
    <string name="cleanButton">Limpiar</string>
    <string name="add_invoice">Añadir factura</string>
    <string name="tab_Graphics">Gráficas</string>
    <string name="tab_Invoice_list">Listado</string>
    <string name="tab_ManualAdd">Añadir de forma manual</string>
    <string name="tab_Kw"> Kw</string>
    <string name="tab_month"> mes</string>
    <string name="tab_m3"> m3</string>
    <string name="tab_Type">Tipo: </string>
    <string name="tab_Amount">Gasto: </string>
    <string name="tab_Date">Fecha: </string>
    <string name="tab_consumption">Consumo: </string>
    <string name="tab_Init">Inicio de facturación: </string>
    <string name="tab_End">Fin de facturación: </string>
    <string name="tab_Electricity">Electricidad</string>
    <string name="tab_Gas">Electricidad</string>
    <string name="tab_Water">Agua</string>
    <string name="tab_Telephone">Telefonía</string>
    <string name="tab_CarRenting">Renting de coche</string>
    <string name="tab_IBI">IBI</string>
    <string name="tab_rental">Alquiler</string>
    <string name="tab_others">otros</string>
    <string name="tab_invoice">Factura </string>
    <string name="today">Hoy</string>
    <string name="yesterday">Ayer</string>
    <string name="walktrough_title_1">Crea tu B-list</string>
    <string name="walktrough_title_2">Sube tus facturas</string>
    <string name="walktrough_title_3">Visualiza tus gastos</string>
    <string name="walktrough_description_1">Crea un grupo y añade a quien tu quieras. Podréis ir añadiendo todas las facturas que compartáis.</string>
    <string name="walktrough_description_2">Sube tus facturas de forma manual o mediante OCR. ¡Podrás añadir todas las facturas que quieras!</string>
    <string name="walktrough_description_3">Podrás visualizar todas las facturas añadidas a cada grupo en formato lista o en modo gráfica. ¡Hay 3 diferentes!</string>
    <string name="empty_invoices_text">Aún no tienes ninguna factura añadida a este grupo.\n Cuando añadas una esta te aparecerá aquí</string>
    <string name="password_change_text1">Para poder cambiar tu contraseña, necesitamos que introduzcas tu contraseña actual.</string>
    <string name="password_change_text2">Ahora, introduce tu nueva contraseña.</string>
    <string name="password_change_text3">Vuelve a introducir tu nueva contraseña</string>
    <string name="password_change_warning_baddpassword">Contraseña incorrecta</string>
    <string name="password_change_passwordchanged">Ha cambiado la contraseña correctamente</string>
    <string name="password_change_warning_errorchanging">Error al cambiar la contraseña</string>
    <string name="password_change_warning_newpassnotequals">Las contraseñas no coinciden, por favor introducelas de nuevo</string>
    <string name="ic_logo_description">Imagen del logo de la aplicación</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="registry_text1">¿Aún no tienes cuenta?</string>
    <string name="registry_text2">Regístrate</string>
    <string name="name">Nombre</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="delete">Eliminar</string>
    <string name="invoice_num">Número de factura</string>
    <string name="invoice_provider">Proveedor</string>
    <string name="invoice_type">Tipo de factura</string>
    <string name="date_emition">Fecha de emisión</string>
    <string name="start_period">Periodo inicio</string>
    <string name="end_period">Periodo fin</string>
    <string name="invoice_consumption">Consumo</string>
    <string name="invoice_amount">Coste</string>
    <string name="show_invoice">Ver factura</string>
    <string name="eye_description">eye</string>
    <string name="error_saving_image">Error al guardar la imagen</string>
    <string name="add_invoice_photo">Añadir mediante camara</string>
    <string name="add_invoice_manually">Añadir de forma manual</string>
    <string name="empty_invoice_title">Sin facturas añadidas</string>
    <string name="ic_plus_description">Simbolo de suma que describe la acción añadir</string>
    <string name="warning_badperioddate">El periodo de fin debe ser superior al periodo de inicio</string>
    <string name="groupinvoiceadd_defaultfilename">PDF creado a partir de foto</string>
    <string name="add">Añadir</string>
    <string name="groupinvoiceadd_uploadtext">Adjuntar factura</string>
    <string name="ic_empty_description">Imagen de una mujer con los brazos abiertos que describe que no hay nada que mostrar</string>
    <string name="my_data">Mis datos</string>
    <string name="warning_login_failed_google">Inicio de sesión con google ha fallado</string>
    <string name="warning_member_on_list">Ya se ha incluido al miembro en la lista</string>
    <string name="warning_member_max">No se pueden añadir más de 10 miembros</string>
    <string name="warning_group_created">Grupo creado correctamente</string>
    <string name="warning_registry_email_exists">El usuario ya existe prueba a introducir otro correo electrónico</string>
    <string name="warning_generic_error">Se ha producido un error :</string>
    <string name="hello">Hola</string>
    <string name="input_text">Texto</string>
    <string name="input_date">Fecha</string>
    <string name="close_session">Cerrar sesión</string>
    <string name="create_your_b_list">Crea tu B-List</string>
    <string name="create_b_list">Crear BLIST</string>
    <string name="invoice_added">Añadida factura</string>
    <string name="no_activity">Sin Actividad</string>
    <string name="no_group_changes">Aún no ha habido cambios en tus grupos. Lo verás aquí cuando haya modficaciones.</string>
    <string name="save_changes">Guardar cambios</string>
    <string name="invoice_model">Tipo de factura</string>
    <string name="date_model">Tipo de dato a representar en gráficas</string>
    <string name="date_period">Guardar cambios</string>
    <string name="start_from">Desde</string>
    <string name="end_at">Hasta</string>
    <string name="list">Listado</string>
    <string name="chart">Gráfica</string>
    <string name="warning_select_file_fail">Error al seleccionar el fichero</string>
    <string name="warning_filter_without_invoice">No hay ninguna factura que coincida con los parametros establecidos</string>
    <string name="warning_period_not_allowed">La fecha \"Desde\" no puede ser superior a la fecha \"Hasta\"</string>
    <string name="warning_filter_not_selected">No ha seleccionado ningún tipo de dato a representar en gráficas</string>
    <string name="warning_adduser_inlist">No se puede agregar un usuario que ya estaba en el grupo con anterioridad</string>
    <string name="warning_adduser_duplicated">Ya se ha incluido al miembro en la lista</string>
    <string name="warning_members_limit">No se pueden añadir más de 10 miembros</string>
    <string name="warning_form_not_full">Por favor, rellene todos los campos</string>
    <string name="warning_editor_cant_modify_admin">Un usuario Editor no puede modificar un Administrador, los cambios no se aplicarán</string>
    <string name="finalize">Finalizar</string>
    <string name="group_updated">Grupo actualizado correctamente</string>
    <string name="edit_group_title">Editar grupo </string>
    <string name="leave_group">Saliendo de grupo</string>
    <string name="no_view_data">No hay datos que representar</string>
    <string name="consumption">Consumo</string>
    <string name="invoice_deleted">Factura borrada correctamente: </string>
    <string name="invoice_inserted">Factura insertada con éxito: </string>
    <string name="need_camera_grants">Se necesitan permisos de camara para poder hacer fotográfías de la factura</string>
    <string name="not_granted">Permisos denegados</string>
    <string name="understand">Lo he entendido</string>
    <string name="need_storage">Se necesitan de almacenamiento para poder almacenar la factura</string>
    <string name="insert_invoice">Insertar nueva factura</string>
    <string name="SimpleDateFormat_pattern">dd/MM/yyyy</string>
    <string name="create_group">Crear grupo</string>
    <string name="init_google_account">Cuenta de google iniciada, no hay contraseña que cambiar</string>
    <string name="emplty">No introducido</string>
    <string name="delete_group">Borrar grupo</string>
    <string name="warning_dialog_deletegroup_title">¿Estas seguro de querer eliminar el grupo?</string>
</resources>