<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:forceDarkAllowed="true"
    tools:context=".ui.LoginActivity">


    <ImageView
        android:id="@+id/imgvLogo"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="96dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/ic_logo_description" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="60dp"
        android:hint="@string/user"
        app:layout_constraintTop_toBottomOf="@+id/imgvLogo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtUserPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignin"
        style="@style/PrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/btnsignin_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />

    <Button
        android:id="@+id/btnSignGoogle"
        style="@style/SecondaryButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/round_button"
        android:text="@string/btnsigngoogle"
        app:backgroundTint="@null"
        app:icon="@drawable/btn_google"
        app:iconGravity="textStart"
        app:iconSize="16dp"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignin" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="0dp"
        android:layout_height="1dp"

        android:background="#000000"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnSignGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvGreeting"
        app:layout_constraintTop_toBottomOf="@+id/btnSignin" />

    <TextView
        android:id="@+id/tvGreeting"
        android:layout_width="24dp"
        android:layout_height="22dp"
        android:gravity="center"

        android:text="@string/separator_text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnSignGoogle"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/btnSignin" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#000000"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/btnSignGoogle"
        app:layout_constraintEnd_toStartOf="@+id/tvGreeting"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignin" />

    <LinearLayout
        android:id="@+id/llay_SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/registry_text1" />

        <TextView
            android:layout_marginStart="4dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/primary_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registry_text2" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>