<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_lay_gray"
    tools:context=".ui.home.homeui.group_invoice.GroupInvoiceTab">


    <ListView
        android:id="@+id/lv_invoice"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@color/background_lay_gray"
        android:divider="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv"
        android:layout_width="251dp"
        android:layout_height="323dp"
        android:contentDescription="@string/ic_logo_description"
        android:src="@drawable/ic_logo"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btManual"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="@string/add_invoice_manually"
        android:textColor="@color/primary_color"
        android:textSize="11sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btOCR"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btOCR"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="@string/add_invoice_photo"
        android:textColor="@color/primary_color"
        android:textSize="11sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/ibAdd"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/ibAdd"
        style="@style/SecondaryButton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/primary_color"
        android:contentDescription="@string/ic_plus_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_plus_white" />


</androidx.constraintlayout.widget.ConstraintLayout>