 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <com.google.android.material.bottomappbar.BottomAppBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"

        android:background="@color/white"
        app:contentInsetStart="0dp"
        app:elevation="0.1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_AGIEG_Add"
                style="@style/PrimaryButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:layout_weight="1"
                android:text="Guardar cambios" />
        </LinearLayout>

    </com.google.android.material.bottomappbar.BottomAppBar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:fitsSystemWindows="true">

        <!-- YOUR MAIN SCROLLING CONTENT HERE -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="32dp"
                android:hint="@string/edt_agagroupname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_AGIEG_GroupName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="32dp"
                android:hint="@string/dd_AGADescription">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_AGIEG_Description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="32dp"
                android:hint="@string/dd_AGACurrency">

                <AutoCompleteTextView
                    android:id="@+id/dd_AGIEG_Currency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType=""
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/txtv_AGAMemberLabel"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/lstv_AGIEG_Members"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="64"
                    android:hint="@string/edt_AGAMemberOfGroup">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_AGIEG_AddMember"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="36"
                    android:hint="@string/dd_AGARole"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText">

                    <AutoCompleteTextView
                        android:id="@+id/dd_AGIEG_Role"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType=""
                        tools:ignore="LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/imgb_AGIEG_AddMember"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@color/white"
                    android:src="@drawable/ic_plus"
                    android:contentDescription="@string/imgb_AGAAddMemberContentDescription" />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>